# GymBuddy

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  jwt.rs  lib.rs  main.rs
src/api/: mod.rs  routes.rs
src/db/: connection.rs  mod.rs
src/middleware/: auth.rs
src/models/: exercise.rs  mod.rs  user.rs  workout.rs  workout_entry.rs
tests/: api_health.rs  auth_register.rs
